@@ -42,19 +42,9 @@ describe 'pupmod' do
               'setting' => 'splay',
               'value' => false
             }) }
+
             it { is_expected.not_to contain_pupmod__conf('splaylimit') }
-
-            it { is_expected.to contain_pupmod__conf('environment').with({
-              'section' => 'agent',
-              'setting' => 'environment',
-              'value' => 'rp_env'
-            }) }
-
-            it { is_expected.to contain_pupmod__conf('remove environment from main').with({
-              'ensure' => 'absent',
-              'section' => 'main',
-              'setting' => 'environment'
-            }) }
+            it { is_expected.not_to contain_pupmod__conf('environment') }
 
             it { is_expected.to contain_pupmod__conf('syslogfacility').with({
               'setting' => 'syslogfacility',
@@ -168,11 +158,6 @@ describe 'pupmod' do
 
               it { is_expected.not_to contain_selboolean('puppetagent_manage_all_files') }
             end
-
-            context 'running from bolt' do
-              let(:environment) { 'bolt_catalog'}
-              it { is_expected.not_to contain_pupmod__conf('environment') }
-            end
           end
 
           describe "with non-default parameters" do
@@ -208,9 +193,25 @@ describe 'pupmod' do
               it { is_expected.to contain_ini_setting("pupmod_splaylimit") }
             end
 
-            context 'with set_environment disabled' do
-              let(:params) {{ :set_environment => false }}
-              it { is_expected.not_to contain_pupmod__conf('environment') }
+            context 'with set_environment enabled ' do
+              let(:params) {{ :set_environment => true }}
+
+              it { is_expected.to contain_pupmod__conf('environment').with({
+                'section' => 'agent',
+                'setting' => 'environment',
+                'value' => 'rp_env'
+              }) }
+
+              it { is_expected.to contain_pupmod__conf('remove environment from main').with({
+                'ensure' => 'absent',
+                'section' => 'main',
+                'setting' => 'environment'
+              }) }
+
+              context 'running from bolt' do
+                let(:environment) { 'bolt_catalog'}
+                it { is_expected.not_to contain_pupmod__conf('environment') }
+              end
             end
 
             context 'with manage_facter_conf => true' do
